Refactor input and output panel content population
(This commit was moved from https://github.com/knime/knime-scripting-editor. Original id: 82eea2e4d94997a26deee3b5ec5457a62f727409)